Added Showcase page with overlay

--- a/showcase.html
+++ b/showcase.html
@@ -19,16 +19,18 @@
     <!-- Custom styles for this template -->
     <link href='https://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/showcase.css" rel="stylesheet">    
   </head>
   <body>
 	<h1>Adam's Art Showcase</h1>	
-	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+	<div id="gallery"></div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="js/imagelightbox.js"></script>  
+	<script src="js/myLightbox.js"></script>  
+	<script src="js/showcase.js"></script>  
   </body>
 </html>
-
-
