Added drop-down menu on main page

--- a/showcase.html
+++ b/showcase.html
@@ -23,7 +23,13 @@
   </head>
   <body>
 	<h1>Adam's Art Showcase</h1>	
-	<div id="gallery"></div>
+	<div class="row">
+		<div class="col-md-2">	
+		</div>
+		<div class="col-md-8">	
+		<div id="gallery"></div>
+		</div>
+	</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
