--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="A Website based off my visit to Walla Walla">
+    <meta name="description" content="A Showcase of my High School Artwork">
     <meta name="author" content="Unknown" >
     <link rel="icon" href="../../favicon.ico">
 
@@ -19,15 +19,63 @@
     <!-- Custom styles for this template -->
     <link href='https://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/query.css" rel="stylesheet">    
   </head>
   <body>
 	<h1>Adam's Art Showcase</h1>	
+	<div class="row">
+		<div class="col-md-3">
+			<ul id="menu">
+  				<li class="top">
+    				<a href="#">About</a>
+    				<ul>
+      				<li class="sub"><a href="/about.html">About</a></li>
+    				</ul>
+  				</li>
+  				<li class="top">
+    				<a href="#">Showcase</a>
+    			<ul class="sub">
+      			<li><a href="/showcase.html">All</a></li>
+      			<li class="top" ><a href="#">Type</a>
+        				<ul class="supersub">
+			         	<li><a href="#">Portrait</a></li>
+          				<li><a href="#">Landscape</a></li>
+          				<li><a href="#">Object</a></li> 
+          				<li><a href="#">Miscellaneous</a></li>           				         
+        				</ul>
+      			</li>
+      			<li class="top"><a href="#">Color</a>
+        				<ul class="supersub">
+          				<li><a href="#">Color</a></li>
+          				<li><a href="#">Black & White</a></li>
+        				</ul>
+      			</li>
+      			<li class="top"><a href="#">Medium</a>
+			     		<ul class="supersub">
+          				<li><a href="#">Pencil</a></li>
+          				<li><a href="#">Charcoal</a></li>
+          				<li><a href="#">Acrylic Paint</a></li>  
+          				<li><a href="#">Color Pastels</a></li>
+          				<li><a href="#">Cray-Paz</a></li>
+          				<li><a href="#">Construction Paper</a></li> 
+          				<li><a href="#">Computer</a></li>                 
+        		  		</ul>
+      		  </li>       
+    			</ul>
+  			</li>
+		</ul>
+</div>
+<div class="col-md-6">
 	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+</div>
+</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+	<script src="js/tendina.js"></script>
+	<script type="text/javascript">$('#menu').tendina()</script>
   </body>
 </html>
 
