--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="A Website based off my visit to Walla Walla">
+    <meta name="description" content="A Showcase of my High School Artwork">
     <meta name="author" content="Unknown" >
     <link rel="icon" href="../../favicon.ico">
 
