--- a/showcase.html
+++ b/showcase.html
@@ -20,30 +20,70 @@
     <link href='https://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet">
     <link href="css/showcase.css" rel="stylesheet">    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  </head>
+    <link href="css/query.css" rel="stylesheet">    
+    </head>
   <body>
-	<h1>Adam's Art Showcase</h1>	
+	<h1>Adam's Art Showcase</h1>		
 	<div class="row">
 		<div class="col-md-2">
+			<ul id="menu">
+  				<li class="top">
+    				<a href="#">About</a>
+    				<ul>
+      				<li class="sub"><a href="/about.html">About</a></li>
+    				</ul>
+  				</li>
+  				<li class="top">
+    				<a href="#">Showcase</a>
+    			<ul class="sub">
+      			<li><button class="all-filter">All</button></li>
+      			<li class="top" ><a href="#">Type</a>
+        				<ul class="supersub">
+			         	<li><button class="portrait-filter">Portrait</button></li>
+          				<li><button class="landscape-filter">Landscape</button></li>
+          				<li><button class="object-filter">Object</button></li> 
+          				<li><button class="miscellaneous-filter">Miscellaneous</button></li>           				         
+        				</ul>
+      			</li>
+      			<li class="top"><a href="#">Color</a>
+        				<ul class="supersub">
+          				<li><button class="color-filter">Color</button></li>
+          				<li><button class="grayscale-filter">Black and White</button></li>
+        				</ul>
+      			</li>
+      			<li class="top"><a href="#">Medium</a>
+			     		<ul class="supersub">
+          				<li><button class="pencil-filter">Pencil</button></li>
+          				<li><button class="charcoal-filter">Charcoal</button></li>
+          				<li><button class="acrylic-filter">Acrylic Paint</button></li>  
+          				<li><button class="pastels-filter">Color Pastels</button></li>
+          				<li><button class="paz-filter">Cray-Paz</button></li>
+          				<li><button class="construction-filter">Construction Paper</button></li> 
+          				<li><button class="computer-filter">Computer</button></li>                 
+        		  		</ul>
+      		  </li>       
+    			</ul>
+  			</li>
+		</ul>		
 		</div>
 		<div class="col-md-8">	
 		<div id="gallery"></div>
 		</div>
+		<div class="col-md-2"></div>
+
 	</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="js/tendina.js"></script>
+	<script type="text/javascript">$('#menu').tendina()</script>
 	<script src="js/imagelightbox.js"></script>  
 	<script src="js/myLightbox.js"></script>  
 	<script src="js/showcase.js"></script>
 	<script src="http://listjs.com/no-cdn/list.js"></script>
 	<script src="http://listjs.com/no-cdn/list.pagination.js"></script>
-	<script>
- 		var paintingList = new List('gallery', { valueNames: ['name'], page: 12, plugins: [ ListPagination({}) ] });
-</script>
- 	  
+	<script src="js/filters.js"></script>  
   </body>
 </html>
