--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     				<a href="#">About</a>
     				<ul>
       				<li class="sub"><a href="/about.html">About</a></li>
+      				<li class="sub"><a href="/original.html">Original Thoughts</a></li>
     				</ul>
   				</li>
   				<li class="top">
