Updated background styling

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <body>
 	<h1>Adam's Art Showcase</h1>	
 	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
-	<div id="about">
+	<div class="about" id="index">
 	<p>Growing up, I had an artistic side to me that I loved.  Even now, I still have that creative side, albeit in a different form.  My love of art peaked when I was in high school.  Needing a way to express myself, I chose to do so primarily by drawing and painting.  I loved to draw portraits mostly, but managed to find other things to draw.</p>
 <img src="img/teenager.jpg" alt="Adam" class="img-responsive" id="teenager">	
 <p>Most of my actual drawings and paintings are unfortunately gone.  I didn’t have much use of them at the time and they were taking space.  Especially the big life size nudes I drew attending a course at PNCA when I was 16 years old.  I figured at some point I would regret it, but then again, we all have regrets.  Now I've reached that point, as I discovered my Art Showcase I put together when I was 16.  I managed to save a few of my drawings and paintings from high school, complete with my thoughts at the time.</p>
