--- a/original.html
+++ b/original.html
@@ -25,7 +25,7 @@
 	<h1>Adam's Art Showcase</h1>	
 	<div class="row">
 		<div class="col-md-3"></div>
-		<div class="col-md-6">
+		<div class="col-md-6" id="index">
 			<p id="initial">Here were my initial thoughts from my art showcase back in 2001-2002.  As you can see, a lot has changed since then, among the notable changes was that I actually had hair when I was young.  Other than that, I'm still the same artistic person but with a different career path and improved maturity and personality.</p>
 			<img src="img/initial-thoughts.jpg" alt="Initial thoughts" class="img-responsive" id="thoughts">	
 		</div>
