--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   			</li>
 		</ul>
 </div>
-<div class="col-md-6">
+<div class="col-md-6"  id="index">
 	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
 </div>
 </div>
