--- a/showcase.html
+++ b/showcase.html
@@ -66,7 +66,7 @@
   			</li>
 		</ul>		
 		</div>
-		<div class="col-md-8">	
+		<div class="col-md-8" id="index">	
 		<div id="gallery"></div>
 		</div>
 		<div class="col-md-2"></div>
