Added feature image on index page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<div class="row">
 		<div class="col-md-3">
 			<ul id="menu">
+				<li><a href="#">Home</a></li>
   				<li class="top">
     				<a href="#">About</a>
     				<ul>
@@ -33,41 +34,13 @@
       				<li class="sub"><a href="/original.html">Original Thoughts</a></li>
     				</ul>
   				</li>
-  				<li class="top">
-    				<a href="#">Showcase</a>
-    			<ul class="sub">
-      			<li><a href="/showcase.html">All</a></li>
-      			<li class="top" ><a href="#">Type</a>
-        				<ul class="supersub">
-			         	<li><a href="#">Portrait</a></li>
-          				<li><a href="#">Landscape</a></li>
-          				<li><a href="#">Object</a></li> 
-          				<li><a href="#">Miscellaneous</a></li>           				         
-        				</ul>
-      			</li>
-      			<li class="top"><a href="#">Color</a>
-        				<ul class="supersub">
-          				<li><a href="#">Color</a></li>
-          				<li><a href="#">Black & White</a></li>
-        				</ul>
-      			</li>
-      			<li class="top"><a href="#">Medium</a>
-			     		<ul class="supersub">
-          				<li><a href="#">Pencil</a></li>
-          				<li><a href="#">Charcoal</a></li>
-          				<li><a href="#">Acrylic Paint</a></li>  
-          				<li><a href="#">Color Pastels</a></li>
-          				<li><a href="#">Cray-Paz</a></li>
-          				<li><a href="#">Construction Paper</a></li> 
-          				<li><a href="#">Computer</a></li>                 
-        		  		</ul>
-      		  </li>       
-    			</ul>
+				<li><a href="/showcase.html">Showcase</a></li>
   			</li>
 		</ul>
-</div>
+	</div>
 <div class="col-md-6"  id="index">
 	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+	<div id="feature"></div>
 </div>
 </div>
     <!-- Bootstrap core JavaScript
@@ -75,6 +48,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+	<script src="js/feature.js"></script>
 	<script src="js/tendina.js"></script>
 	<script type="text/javascript">$('#menu').tendina()</script>
   </body>
