--- a/showcase.html
+++ b/showcase.html
@@ -27,6 +27,7 @@
 	<div class="row">
 		<div class="col-md-2">
 			<ul id="menu">
+			   <li><a href="/index.html">Home</a></li>
   				<li class="top">
     				<a href="#">About</a>
     				<ul>
