Updated overlay styling

--- a/error.html
+++ b/error.html
@@ -25,35 +25,16 @@
 	<h1>Adam's Art Showcase</h1>	
 	<div class="row">
 		<div class="col-md-3">
-			<ul id="menu">
-				<li><a href="#">Home</a></li>
-  				<li class="top">
-    				<a href="#">About</a>
-    				<ul>
-      				<li class="sub"><a href="/about.html">About</a></li>
-      				<li class="sub"><a href="/original.html">Original Thoughts</a></li>
-    				</ul>
-  				</li>
-				<li><a href="/showcase.html">Showcase</a></li>
-  			</li>
-		</ul>
 	</div>
 <div class="col-md-6"  id="index">
 	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
-	<div id="feature"></div>
+	<h3>The page you are looking for doesn't exist</h3>
 </div>
 </div>
-	<div class="row" style="height: 100px;">
-	</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
-	<script src="js/feature.js"></script>
-	<script src="js/tendina.js"></script>
-	<script type="text/javascript">$('#menu').tendina()</script>
   </body>
 </html>
-
-
