--- a/showcase.html
+++ b/showcase.html
@@ -32,6 +32,7 @@
     				<a href="#">About</a>
     				<ul>
       				<li class="sub"><a href="/about.html">About</a></li>
+      				<li class="sub"><a href="/original.html">Original Thoughts</a></li>
     				</ul>
   				</li>
   				<li class="top">
@@ -73,6 +74,7 @@
 		<div class="col-md-2"></div>
 
 	</div>
+	<div class="row" style="height: 100px;"></div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
