--- a/original.html
+++ b/original.html
@@ -19,17 +19,32 @@
     <!-- Custom styles for this template -->
     <link href='https://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet">  
-    <link href="css/about.css" rel="stylesheet">      
+    <link href="css/about.css" rel="stylesheet"> 
+    <link href="css/query.css" rel="stylesheet">      
   </head>
   <body>
 	<h1>Adam's Art Showcase</h1>	
 	<div class="row">
-		<div class="col-md-3"></div>
+		<div class="col-md-3">
+			<ul id="menu">
+				<li><a href="index.html">Home</a></li>
+  				<li class="top">
+    				<a href="#">About</a>
+    				<ul>
+      				<li class="sub"><a href="/about.html">About</a></li>
+      				<li class="sub"><a href="/original.html">Original Thoughts</a></li>
+    				</ul>
+  				</li>
+				<li><a href="/showcase.html">Showcase</a></li>
+  			</li>
+		</ul>		
+		</div>
 		<div class="col-md-6" id="index">
 			<p id="initial">Here were my initial thoughts from my art showcase back in 2001-2002.  As you can see, a lot has changed since then, among the notable changes was that I actually had hair when I was young.  Other than that, I'm still the same artistic person but with a different career path and improved maturity and personality.</p>
 			<img src="img/initial-thoughts.jpg" alt="Initial thoughts" class="img-responsive" id="thoughts">	
 		</div>
-</div>
+	</div>
+	<div class="row" style="height: 100px;"></div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
