Added jumbotron header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <link href="css/query.css" rel="stylesheet">    
   </head>
   <body>
+  <div class="jumbotron">
+	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
 	<h1>Adam's Art Showcase</h1>	
+	</div>
 	<div class="row">
 		<div class="col-md-3">
 			<ul id="menu">
@@ -39,8 +42,12 @@
 		</ul>
 	</div>
 <div class="col-md-6"  id="index">
-	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
-	<div id="feature"></div>
+	<div class="col-md-6">
+		<p id="intro">Welcome to Adam's Art Showcase, a collection of art work I drew and painted back in High School from 2001-2002.  Enjoy a random drawing here or you can see everything on the Showcase page or read more about my thought process in the About section.  You can even search my artwork by name or filter based on categories.  Hope you all enjoy!</p>
+	</div>
+	<div class="col-md-6">
+		<div id="feature"></div>
+	</div>
 </div>
 </div>
 	<div class="row" style="height: 100px;">
