--- a/showcase.html
+++ b/showcase.html
@@ -23,9 +23,12 @@
     <link href="css/query.css" rel="stylesheet">    
     </head>
   <body>
-	<h1>Adam's Art Showcase</h1>		
+  <div class="jumbotron">
+	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+	<h1>Adam's Art Showcase</h1>	
+	</div>	
 	<div class="row">
-		<div class="col-md-2">
+		<div class="col-md-3">
 			<ul id="menu">
 			   <li><a href="/index.html">Home</a></li>
   				<li class="top">
@@ -68,7 +71,7 @@
   			</li>
 		</ul>		
 		</div>
-		<div class="col-md-8" id="index">	
+		<div class="col-md-6" id="index">	
 		<div id="gallery">
     <h2>Search by Title</h2>
     <input id="icon" class="search input-lg" placeholder="Search">
