--- a/about.html
+++ b/about.html
@@ -23,8 +23,10 @@
 	 <link href="css/query.css" rel="stylesheet">        
   </head>
   <body>
-	<h1>Adam's Art Showcase</h1>	
+  <div class="jumbotron">
 	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+	<h1>Adam's Art Showcase</h1>	
+	</div>
 	<div class="row">
 			<div class="col-md-3">
 			<ul id="menu">
