--- a/original.html
+++ b/original.html
@@ -23,7 +23,10 @@
     <link href="css/query.css" rel="stylesheet">      
   </head>
   <body>
+  <div class="jumbotron">
+	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
 	<h1>Adam's Art Showcase</h1>	
+	</div>
 	<div class="row">
 		<div class="col-md-3">
 			<ul id="menu">
