Updated jumbotron styling, pagination button styling

--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
 
     <!-- Custom styles for this template -->
     <link href='https://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet">
     <link href="css/query.css" rel="stylesheet">    
   </head>
   <body>
   <div class="jumbotron">
-	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
-	<h1>Adam's Art Showcase</h1>	
+  		<div class="row">
+  			<div class="col-xs-4">
+				<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+			</div>
+			<div class="col-xs-8">	
+				<h1 class="header">Adam's Art Showcase</h1>
+			</div>	
+		</div>	
 	</div>
 	<div class="row">
 		<div class="col-md-3">
