--- a/about.html
+++ b/about.html
@@ -24,8 +24,14 @@
   </head>
   <body>
   <div class="jumbotron">
-	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
-	<h1>Adam's Art Showcase</h1>	
+  		<div class="row">
+  			<div class="col-xs-4">
+				<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+			</div>
+			<div class="col-xs-8">	
+				<h1 class="header">Adam's Art Showcase</h1>
+			</div>	
+		</div>	
 	</div>
 	<div class="row">
 			<div class="col-md-3">
