--- a/error.html
+++ b/error.html
@@ -23,11 +23,14 @@
   </head>
   <body>
   <div class="jumbotron">
-	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
-	<h1>Adam's Art Showcase</h1>	
-	</div>
-	<div class="row">
-		<div class="col-md-3">
+  		<div class="row">
+  			<div class="col-xs-4">
+				<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
+			</div>
+			<div class="col-xs-8">	
+				<h1 class="header">Adam's Art Showcase</h1>
+			</div>	
+		</div>	
 	</div>
 <div class="col-md-6"  id="index">
 	<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
