Updated dropdown styling, added favicon

--- a/showcase.html
+++ b/showcase.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="A Showcase of my High School Artwork">
     <meta name="author" content="Unknown" >
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="/img/icon.png">
 
     <title>Adam's Art Showcase</title>
 
@@ -39,15 +39,15 @@
 			   <li><a href="/index.html">Home</a></li>
   				<li class="top">
     				<a href="#">About</a>
-    				<ul>
-      				<li class="sub"><a href="/about.html">About</a></li>
-      				<li class="sub"><a href="/original.html">Original Thoughts</a></li>
+    				<ul class="semisub">
+      				<li class="top"><a href="/about.html">About</a></li>
+      				<li class="top"><a href="/original.html">Original Thoughts</a></li>
     				</ul>
   				</li>
   				<li class="top">
     				<a href="#">Showcase</a>
     			<ul class="sub">
-      			<li><button class="all-filter">All</button></li>
+      			<li><button class="all-filter" id="all">All</button></li>
       			<li class="top" ><a href="#">Type</a>
         				<ul class="supersub">
 			         	<li><button class="portrait-filter">Portrait</button></li>
