--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="A Showcase of my High School Artwork">
     <meta name="author" content="Unknown" >
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="/img/icon.png">
 
     <title>Adam's Art Showcase</title>
 
@@ -39,9 +39,9 @@
 				<li><a href="#">Home</a></li>
   				<li class="top">
     				<a href="#">About</a>
-    				<ul>
-      				<li class="sub"><a href="/about.html">About</a></li>
-      				<li class="sub"><a href="/original.html">Original Thoughts</a></li>
+    				<ul class="semisub">
+      				<li class="top"><a href="/about.html">About</a></li>
+      				<li class="top"><a href="/original.html">Original Thoughts</a></li>
     				</ul>
   				</li>
 				<li><a href="/showcase.html">Showcase</a></li>
