Updated dropdown CSS

--- a/showcase.html
+++ b/showcase.html
@@ -59,7 +59,7 @@
       			<li class="top"><a href="#">Color</a>
         				<ul class="supersub">
           				<li><button class="color-filter">Color</button></li>
-          				<li><button class="grayscale-filter">Black and White</button></li>
+          				<li><button class="grayscale-filter">Black & White</button></li>
         				</ul>
       			</li>
       			<li class="top"><a href="#">Medium</a>
