Added overlay for front page image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   			</li>
 		</ul>
 	</div>
-<div class="col-md-6"  id="index">
+<div class="col-md-6"  id="index" style="height: 600px">
 	<div class="col-md-6">
 		<p id="intro">Welcome to Adam's Art Showcase, a collection of art work I drew and painted back in High School from 2001-2002.  Enjoy a random drawing here or you can see everything on the Showcase page or read more about my thought process in the About section.  You can even search my artwork by name or filter based on categories.  Hope you all enjoy!</p>
 	</div>
@@ -65,6 +65,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
 	<script src="js/feature.js"></script>
+	<script src="js/imagelightbox.js"></script>  
+	<script src="js/myFrontPageLightbox.js"></script>
 	<script src="js/tendina.js"></script>
 	<script type="text/javascript">$('#menu').tendina()</script>
   </body>
