--- a/showcase.html
+++ b/showcase.html
@@ -777,7 +777,7 @@
                 class="img-responsive center-block" style="max-width: 250px" alt="portrait of a Shady Man">
             </a>
             <br>
-            <h4 class="name">portrait of a Shady Man</h4>
+            <h4 class="name">Portrait of a Shady Man</h4>
         </li>
         <li class="painting color portrait color pastels">
             <a href="img/nepal.jpg" data-imagelightbox="a">
