fixed transform CSS, broken List.js links

--- a/showcase.html
+++ b/showcase.html
@@ -19,8 +19,8 @@
     <!-- Custom styles for this template -->
     <link href='https://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/showcase.css" rel="stylesheet">    
-    <link href="css/query.css" rel="stylesheet">    
+    <link href="css/showcase.css" rel="stylesheet">
+    <link href="css/query.css" rel="stylesheet">
     </head>
   <body>
   <div class="jumbotron">
@@ -28,10 +28,10 @@
   			<div class="col-xs-4">
 				<img src="img/logo.svg" alt="Logo" class="img-responsive" id="logo">
 			</div>
-			<div class="col-xs-8">	
+			<div class="col-xs-8">
 				<h1 class="header">Adam's Art Showcase</h1>
-			</div>	
-		</div>	
+			</div>
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-3">
@@ -52,8 +52,8 @@
         				<ul class="supersub">
 			         	<li><button class="portrait-filter">Portrait</button></li>
           				<li><button class="landscape-filter">Landscape</button></li>
-          				<li><button class="object-filter">Object</button></li> 
-          				<li><button class="miscellaneous-filter">Miscellaneous</button></li>           				         
+          				<li><button class="object-filter">Object</button></li>
+          				<li><button class="miscellaneous-filter">Miscellaneous</button></li>
         				</ul>
       			</li>
       			<li class="top"><a href="#">Color</a>
@@ -66,18 +66,18 @@
 			     		<ul class="supersub">
           				<li><button class="pencil-filter">Pencil</button></li>
           				<li><button class="charcoal-filter">Charcoal</button></li>
-          				<li><button class="acrylic-filter">Acrylic Paint</button></li>  
+          				<li><button class="acrylic-filter">Acrylic Paint</button></li>
           				<li><button class="pastels-filter">Color Pastels</button></li>
           				<li><button class="paz-filter">Cray-Paz</button></li>
-          				<li><button class="construction-filter">Construction Paper</button></li> 
-          				<li><button class="computer-filter">Computer</button></li>                 
+          				<li><button class="construction-filter">Construction Paper</button></li>
+          				<li><button class="computer-filter">Computer</button></li>
         		  		</ul>
-      		  </li>       
+      		  </li>
     			</ul>
   			</li>
-		</ul>		
+		</ul>
 		</div>
-		<div class="col-md-6" id="index">	
+		<div class="col-md-6" id="index">
 		<div id="gallery">
     <h2>Search by Title</h2>
     <input id="icon" class="search input-lg" placeholder="Search">
@@ -1057,10 +1057,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="js/tendina.js"></script>
 	<script type="text/javascript">$('#menu').tendina()</script>
-	<script src="js/imagelightbox.js"></script>  
-	<script src="js/myLightbox.js"></script>  
-	<script src="http://listjs.com/no-cdn/list.js"></script>
-	<script src="http://listjs.com/no-cdn/list.pagination.js"></script>
-	<script src="js/filters.js"></script>  
+	<script src="js/imagelightbox.js"></script>
+	<script src="js/myLightbox.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.3.0/list.min.js"></script>
+	<script src="js/list.pagination.min.js"></script>
+	<script src="js/filters.js"></script>
   </body>
 </html>
