--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
       To create a production bundle, use `npm run build`.
     -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="/js/imagelightbox.js"></script>
+	<script src="/js/myFrontPageLightbox.js"></script>
+	<script src="/js/myLightbox.js"></script> 
   </body>
 </html>
