Updated home page styles

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="/js/imagelightbox.js"></script>
 	<script src="/js/myFrontPageLightbox.js"></script>
-	<script src="/js/myLightbox.js"></script> 
+	<!--<script src="/js/myLightbox.js"></script>--> 
   </body>
 </html>
